crates/peregrine-tui/src/app/agent_ui/chatwidget/snapshots/codex_tui__chatwidget__tests__plugins_popup_curated_marketplace.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Plugins
  Browse plugins from available marketplaces.
  Installed 1 of 4 available plugins.

  [All Plugins]  Installed (1)  Curated  Repo Marketplace  Add Marketplace

  Type to search plugins
› [ ] Alpha Sync          Disabled    Space to enable; Enter view details.
  [-] Bravo Search        Available · ChatGPT Marketplace · Search docs and tickets.
  [-] Hidden Repo Plugin  Available · Repo Marketplace · Should not be shown in /plugins.
  [-] Starter             Available · ChatGPT Marketplace · Included by default.

  space enable/disable · ←/→ select marketplace · enter view details · esc close
